{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 578,
  "lineage": "c33c35e6-5112-20cf-3c9b-395c5876c11f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three-tier-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aa0ab1feea4140e",
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:elastic-ip/eipalloc-03aa0ab1feea4140e",
            "association_id": "eipassoc-0d5793fdd25dc5e43",
            "domain": "vpc",
            "id": "eipalloc-03aa0ab1feea4140e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d271c303ad30709b",
            "private_dns": "ip-10-0-0-4.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.4",
            "public_dns": "ec2-47-129-68-11.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.129.68.11",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:internet-gateway/igw-0e255f4147c4a0553",
            "id": "igw-0e255f4147c4a0553",
            "owner_id": "536697246548",
            "tags": {
              "Name": "three-tier-igw"
            },
            "tags_all": {
              "Name": "three-tier-igw"
            },
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "three-tier-web-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:loadbalancer/app/three-tier-web-lb/18c9195ac9ff5fae",
            "arn_suffix": "app/three-tier-web-lb/18c9195ac9ff5fae",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-web-lb-1189747871.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:loadbalancer/app/three-tier-web-lb/18c9195ac9ff5fae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08f74c3ac71d72ce3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c486d10eb9434fd8"
              },
              {
                "subnet_id": "subnet-0f7a611eef9411827"
              }
            ],
            "subnets": [
              "subnet-0c486d10eb9434fd8",
              "subnet-0f7a611eef9411827"
            ],
            "tags": {
              "Environment": "three-tier-web-lb"
            },
            "tags_all": {
              "Environment": "three-tier-web-lb"
            },
            "vpc_id": "vpc-0a257f96cabf5b321",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.three-tier-alb-sg-1",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three-tier-web-lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:listener/app/three-tier-web-lb/18c9195ac9ff5fae/c89736f5b49dd9b4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:targetgroup/three-tier-web-lb-tg/f6c287278f9499c6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:listener/app/three-tier-web-lb/18c9195ac9ff5fae/c89736f5b49dd9b4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:loadbalancer/app/three-tier-web-lb/18c9195ac9ff5fae",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.three-tier-web-lb",
            "aws_lb_target_group.three-tier-web-lb-tg",
            "aws_security_group.three-tier-alb-sg-1",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three-tier-web-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:targetgroup/three-tier-web-lb-tg/f6c287278f9499c6",
            "arn_suffix": "targetgroup/three-tier-web-lb-tg/f6c287278f9499c6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:targetgroup/three-tier-web-lb-tg/f6c287278f9499c6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:536697246548:loadbalancer/app/three-tier-web-lb/18c9195ac9ff5fae"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "three-tier-web-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three-tier-natgw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03aa0ab1feea4140e",
            "association_id": "eipassoc-0d5793fdd25dc5e43",
            "connectivity_type": "public",
            "id": "nat-07c8f012b0f81a34a",
            "network_interface_id": "eni-0d271c303ad30709b",
            "private_ip": "10.0.0.4",
            "public_ip": "47.129.68.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c486d10eb9434fd8",
            "tags": {
              "Name": "three-tier-natgw-01"
            },
            "tags_all": {
              "Name": "three-tier-natgw-01"
            }
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-app-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:route-table/rtb-051d60debb1c0b1d1",
            "id": "rtb-051d60debb1c0b1d1",
            "owner_id": "536697246548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07c8f012b0f81a34a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-app-rt"
            },
            "tags_all": {
              "Name": "three-tier-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:route-table/rtb-088a192cab08a4749",
            "id": "rtb-088a192cab08a4749",
            "owner_id": "536697246548",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e255f4147c4a0553",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "three-tier-web-rt"
            },
            "tags_all": {
              "Name": "three-tier-web-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2fc68f96e669376",
            "route_table_id": "rtb-088a192cab08a4749",
            "subnet_id": "subnet-0c486d10eb9434fd8"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_route_table.three-tier-web-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06157c9b3a3a5ccff",
            "route_table_id": "rtb-088a192cab08a4749",
            "subnet_id": "subnet-0f7a611eef9411827"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-igw",
            "aws_route_table.three-tier-web-rt",
            "aws_subnet.three-tier-pub-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a66f59ae9d65680d",
            "route_table_id": "rtb-051d60debb1c0b1d1",
            "subnet_id": "subnet-07ffd5db0dc08e192"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-1",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034f6afec2986ad01",
            "route_table_id": "rtb-051d60debb1c0b1d1",
            "subnet_id": "subnet-051b2b28167942ce8"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b19a34e08c7ec50",
            "route_table_id": "rtb-051d60debb1c0b1d1",
            "subnet_id": "subnet-0c4a6f4dd11bab226"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-3",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three-tier-rt-as-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1da8d19167d5e4a",
            "route_table_id": "rtb-051d60debb1c0b1d1",
            "subnet_id": "subnet-01275849d23c45735"
          },
          "dependencies": [
            "aws_eip.three-tier-nat-eip",
            "aws_internet_gateway.three-tier-igw",
            "aws_nat_gateway.three-tier-natgw-01",
            "aws_route_table.three-tier-app-rt",
            "aws_subnet.three-tier-pub-sub-1",
            "aws_subnet.three-tier-pvt-sub-4",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-alb-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:security-group/sg-08f74c3ac71d72ce3",
            "description": "Security group for the web tier Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f74c3ac71d72ce3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-alb-sg-1",
            "name_prefix": "",
            "owner_id": "536697246548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-alb-sg-1"
            },
            "tags_all": {
              "Name": "three-tier-alb-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:security-group/sg-0b65bfa4a08e1fb3f",
            "description": "Security group for the RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b65bfa4a08e1fb3f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-033e62ef5501b1ea6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "three-tier-db-sg",
            "name_prefix": "",
            "owner_id": "536697246548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-db-sg"
            },
            "tags_all": {
              "Name": "three-tier-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three-tier-alb-sg-1",
            "aws_security_group.three-tier-ec2-asg-sg-app",
            "aws_subnet.three-tier-pvt-sub-1",
            "aws_subnet.three-tier-pvt-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:security-group/sg-0ef5bdbb0ad711a6f",
            "description": "It will akllow inbound traffic to the EC2 instances in the Auto Scaling Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef5bdbb0ad711a6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-ec2-asg-sg",
            "name_prefix": "",
            "owner_id": "536697246548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-ec2-asg-sg"
            },
            "tags_all": {
              "Name": "three-tier-ec2-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three-tier-ec2-asg-sg-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:security-group/sg-033e62ef5501b1ea6",
            "description": "Security group for the application tier EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033e62ef5501b1ea6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.32/28",
                  "10.0.0.48/28"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f74c3ac71d72ce3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f74c3ac71d72ce3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three-tier-ec2-asg-sg-app",
            "name_prefix": "",
            "owner_id": "536697246548",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "three-tier-ec2-asg-sg-app"
            },
            "tags_all": {
              "Name": "three-tier-ec2-asg-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three-tier-alb-sg-1",
            "aws_subnet.three-tier-pvt-sub-1",
            "aws_subnet.three-tier-pvt-sub-2",
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:subnet/subnet-0c486d10eb9434fd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c486d10eb9434fd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536697246548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pub-sub-1"
            },
            "tags_all": {
              "Name": "three-tier-pub-sub-1"
            },
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:subnet/subnet-0f7a611eef9411827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7a611eef9411827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536697246548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pub-sub-2"
            },
            "tags_all": {
              "Name": "three-tier-pub-sub-2"
            },
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:subnet/subnet-07ffd5db0dc08e192",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ffd5db0dc08e192",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697246548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-1"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-1"
            },
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:subnet/subnet-051b2b28167942ce8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b2b28167942ce8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697246548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-2"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-2"
            },
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:subnet/subnet-0c4a6f4dd11bab226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4a6f4dd11bab226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697246548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-3"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-3"
            },
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three-tier-pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:subnet/subnet-01275849d23c45735",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01275849d23c45735",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "536697246548",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three-tier-pvt-sub-4"
            },
            "tags_all": {
              "Name": "three-tier-pvt-sub-4"
            },
            "vpc_id": "vpc-0a257f96cabf5b321"
          },
          "dependencies": [
            "aws_vpc.three-tier-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:536697246548:vpc/vpc-0a257f96cabf5b321",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03490a31d30e13b5f",
            "default_route_table_id": "rtb-01dede4e99d761953",
            "default_security_group_id": "sg-060ccc3b3abd720ea",
            "dhcp_options_id": "dopt-00467352c1a98b8f3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a257f96cabf5b321",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01dede4e99d761953",
            "owner_id": "536697246548",
            "tags": {
              "Name": "three-tier-vpc"
            },
            "tags_all": {
              "Name": "three-tier-vpc"
            }
          }
        }
      ]
    }
  ]
}